Deleted unnecessary text

--- a/firstPage.html
+++ b/firstPage.html
@@ -104,20 +104,19 @@
 
 							<hr>
 						Привет.<br>
-						Сайт оформлен ТАК временно, посмотрим как будет потом. За остальной информацией, связанной с этим, идите в раздел "Предложения". <br>
-						А теперь чутка внесу ясность в некоторые моменты: </h2>
+						Внесу ясность в некоторые моменты:
+						</h2>
 						<ul class="mainUl">
-							<li> <h2 class="testInfo">Языки. <br>Кто-то из вас мог не заметить, но в верхнем левом углу есть кнопка смены языка. Это на случай, если кому-то из вас не нравится эта излишняя грамотность и официальность, которая ни к чему, так как мы тут все свои, но я оставил оба варианта на всякий случай. Я также постарался максимально не изменять смысл написанного, чтобы он оставался одинаковым на разных языках. <br>
-							ВНИМАНИЕ, СПАСИБО ЗА ВНИМАНИЕ: Смена языка не распространяется на весь этот текст, ибо я заебусь переписывать всё это только на дшодшейском, спасибо за понимание. Тем более этот текст, скорее всего, удалится в будущем. Такие дела. </h2> </li>
+							<li> <h2 class="testInfo">Эээ...</h2> </li>
 							<br>
-							<li> <h2 class="testInfo">О приватности сайта и другое. <br>Сайт создан, конечно же, для нас троих, но это не значит, что на него не будет больше никто заходить. То есть к чему это я, а точнее зачем мне подстраивать сайт для кого-то ещё по мимо нас? - Отвечаю, - это для практики. Мне в будущем (возможно) придётся делать публичные сайты, а такой приватный сайт, на котором у меня уже есть 2 тестировщика (т.е вы) - это хорошая практика (+ возможно сюда кто-то ещё будет заходить в будущем. Хз, посмотрим, обсудим). К тому же я ещё и с пользой практикуюсь, делая что-то полезное для нас, а не просто так.</h2> </li>
+							<li> <h2 class="testInfo">Ща</h2> </li>
 							<br>
-							<li> <h2 class="testInfo">Кроссплатформенность. <br>Я не рекомендую заходить на этот сайт с телефона (Пока что), т.к он может выглядеть там криво и непредсказуемо, я предупредил вас. Хотя я так и говорю, но на данный момент он уже немного адаптирован под телефоны, так что сильно убого не будет выглядеть по идее (По крайней мере сейчас). Потом я полностью под тлфоны сделаю, сейчас мне лень. 
+							<li> <h2 class="testInfo">сек
 							</h2> 
 							</li>
 							<br>
-							<li><h2 class="testInfo">Баги.<br>
-							Если найдёте баг - пишите, скажу спасибо.</h2></li>
+							<li><h2 class="testInfo">Забыл короче<br>
+							</h2></li>
 
 						</ul>
 
