--- a/Dshod/Sign_up.html
+++ b/Dshod/Sign_up.html
@@ -19,7 +19,7 @@
 
 					<div class="sign_up_nav">
 						<?php
-							if ($_COOKIE['sessionok'] != '') {
+							if ($_SESSION['login'] != '') {
 							?>
 										<a class="sign_up" href="../disable2.php">выхад</a>
 
@@ -27,7 +27,7 @@
 										<a class="sign_up" href="Profile.php">
 											<div class="profile_button_nav">
 										  <img class="avatar" src="../Avatar/empty.jpg" >
-										  <h3 class="lala"> <?php echo $_COOKIE['sessionok']; ?> </h3> </div>
+										  <h3 class="lala"> <?php echo $_SESSION['login']; ?> </h3> </div>
 										   </a>
 									
 									
