Created beginning of the game, freezes

--- a/Dshod/Downloads.html
+++ b/Dshod/Downloads.html
@@ -61,7 +61,7 @@
 							<div class="nav">
 								<a class="nav__link" href="../index2.php">главная)</a>
 							<a class="nav__link active" href="Downloads.php">скачятт</a>
-							<a class="nav__link" href="#Test2">каво</a>
+							<a class="nav__link" href="../game.php">игра</a>
 							<a class="nav__link" href="#Test3">каво</a>
 							<a class="nav__link" href="Providers.php">чокаво м)</a>
 							</div>
