--- a/firstPage.html
+++ b/firstPage.html
@@ -60,7 +60,7 @@
 							<div class="nav">
 								<a class="nav__link active" href="index.php">Главная</a>
 							<a class="nav__link" href="Ru/Downloads.php">Скачать</a>
-							<a class="nav__link" href="#Test2">Пусто</a>
+							<a class="nav__link" href="game.php">Игра</a>
 							<a class="nav__link" href="#Test3">Пусто</a>
 							<a class="nav__link" href="Ru/Providers.php">Предложения</a>
 							</div>
