--- a/firstPage2.html
+++ b/firstPage2.html
@@ -60,7 +60,7 @@
 							<div class="nav">
 								<a class="nav__link active" href="index2.php">главная)</a>
 							<a class="nav__link" href="Dshod/Downloads.php">скачятт</a>
-							<a class="nav__link" href="#Test2">каво</a>
+							<a class="nav__link" href="game.php">игра</a>
 							<a class="nav__link" href="#Test3">каво</a>
 							<a class="nav__link" href="Dshod/Providers.php">чокаво м)</a>
 							</div>
