--- a/Dshod/Sign_up.html
+++ b/Dshod/Sign_up.html
@@ -76,10 +76,10 @@
 							<hr>
 							<form action="../save_user2.php" method="post" class="sign_up_form">
 							  <label for="fname">чо за логин:</label><br>
-							  <input class="sign_up_input" type="text" id="id_login" name="login" value="paladin-bear" maxlength="24"><br>
+							  <input class="sign_up_input" type="text" id="id_login" name="login" maxlength="24"><br>
 
 							  <label for="lname">чо за пароль:</label><br>
-							  <input class="sign_up_input" type="password" id="id_password" name="password" value="мама123" maxlength="15"> <br>
+							  <input class="sign_up_input" type="password" id="id_password" name="password" maxlength="24"> <br>
 
 							  <input class="sign_up_button" type="submit" value="заригистрираваца">
 
