--- a/Ru/Sign_up.html
+++ b/Ru/Sign_up.html
@@ -76,10 +76,10 @@
 							<hr>
 							<form action="../save_user.php" method="post" class="sign_up_form">
 							  <label for="fname">Придумайте логин:</label><br>
-							  <input class="sign_up_input" type="text" id="id_login" name="login" value="xXxPussyDestroyerxXx" maxlength="24"><br>
+							  <input class="sign_up_input" type="text" id="id_login" name="login" maxlength="24"><br>
 
 							  <label for="lname">Придумайте пароль:</label><br>
-							  <input class="sign_up_input" type="password" id="id_password" name="password" value="мама123" maxlength="15"> <br>
+							  <input class="sign_up_input" type="password" id="id_password" name="password" maxlength="24"> <br>
 
 							  <input class="sign_up_button" type="submit" value="Зарегистрироваться">
 
