--- a/game.html
+++ b/game.html
@@ -1,20 +1,22 @@
 <!DOCTYPE HTML>
 <HTML>
 <HEAD>
-	<TITLE>Игра</TITLE>
-	<LINK rel="stylesheet" href="gameStyle.css">
+	<TITLE>dungeon</TITLE>
+	<link rel="stylesheet" href="gameStyle.css">
 	<meta charset="utf-8">
+	
 </HEAD>
+
 <BODY>
 	<div id="container">
 		<div id="world">
-			
+			<div class="square"></div>
 		</div>
 		<div id="pawn">
-			<!-- <button class="sign_up" id="continue">Продолжить</button> -->
+			<button class="sign_up" id="continue">Продолжить</button>
 			<a class="sign_up" href="index.php">Обратно на сайт</a>
 		</div>
 	</div>
 </BODY>
-</HTML>
 <script src="gamesScripts.js"></script>
+</HTML>
